little system in theory

--- a/result.tex
+++ b/result.tex
@@ -35,9 +35,20 @@ Such a shifting between waves at the lower and upper boundaries of the band gap 
 A defect-mode transmission peak of 1.5\% energy transmission appears in the band gap.
 It can be tuned from 173 to 184 GHz by application of electric field (40 kV/cm) to the defect STO layer \cite{skoromets2013}.
 %}}}
+%% TODO remaining topics to be added: 
+%%			* PhCs with metallic/metamaterial inclusios, [Monsoriu, Lina Shi and friends]
 
 
 \section{Wire medium} % references to -> %{{{
+\mdf{
+ref Homogenisation of nonlocal media such as wires 
+\cite{capolino2009book}
+\cite{silveirinha2007metamaterial}
+\cite{belov2003strong}
+\cite{belov2002dispersion}
+\cite{lindell2001bw}
+\cite{silveirinha2005homogenization}
+}
 \add{
 We assume the medium is inductive $\quad \Rightarrow \quad  \varepsilon(f) = 1 - \frac{f_p^2}{f^2}$. 
 
