--- a/theory.tex
+++ b/theory.tex
@@ -1,17 +1,4 @@
-% -> Comparison of eps-mu and spatial-dispersive models (electric quadrupoles..., [Merlin])
-% -> Why magnetic resonances do not contribute to static permeability?
-% Electrodynamics of periodic structures
 
-%% TODO remaining topics to be added: 
-%%			* PhCs with metallic/metamaterial inclusios, [Monsoriu, Lina Shi and friends]
-
-%% TODO time convention
-
-% TODO we refer to tunability - complete it in the rest of the document!!
-%% TODO unify impedance as `Z', not `z'
-
-% TODO check if the wavenumber K~/ (2pi/a) is correct
-% unify the terminology "band diagram" - "dispersion curves"
 
 
 \add{The theoretical chapter starts with a brief review of \textit{electrodynamics of continuous media}. In its customary form without account for spatial dispersion, this topic is treated in every related textbook, so classical linear electrodynamics is introduced in a minimalistic manner.
@@ -80,7 +67,8 @@ the opposite, `optical', convention is used with time dependence of $e^{-\ii \om
 The choice of $e^{+\ii\omega t}$ or $e^{-\ii\omega t}$ determines the sign of imaginary part in virtually all complex quantities discussed in this thesis, but with correct interpretation it makes no difference in the physical conclusions as it is only a formal simplification.
 In the real world, observable fields do not have any imaginary component so the real part of the result has to be taken. 
 
-In the $e^{+\ii\omega t}$ convention, many parameters of a passive (lossy) system are restricted to have \textit{negative imaginary part}.  An additional complication arises from that a part of the authors using $e^{+\ii\omega t}$ convention wish to represent the imaginary part as \textit{positive}, and they define complex quantities as, e.g., $\varepsilon = \varepsilon' - \ii \varepsilon''$, thus in their case $\varepsilon''\equiv -\text{Im}(\varepsilon)$. Thorough the thesis, we however represent the real and imaginary parts naturally as $\varepsilon := \varepsilon' + \ii \varepsilon'' $.
+In the $e^{+\ii\omega t}$ convention, many parameters of a passive (lossy) system are restricted to have \textit{negative imaginary part}.  An additional complication arises from that a part of the authors using $e^{+\ii\omega t}$ convention wish to represent the imaginary part as \textit{positive}, and they define complex quantities as, e.g., $\varepsilon = \varepsilon' - \ii \varepsilon''$, % TODO verify if this is e.g. "Wallen2011-Anti-resonant response of ..."
+thus in their case $\varepsilon''\equiv -\text{Im}(\varepsilon)$. Thorough the thesis, we however represent the real and imaginary parts naturally as $\varepsilon := \varepsilon' + \ii \varepsilon'' $.
 %}}}
 \paragraph{Dispersion relations in vacuum} %{{{
 Only some combinations of ($\E_0, \omega, \kk$) provide a physical solution of the wave equation (\ref{eq_wave}). In vacuum, the allowed solutions can be obtained by first substituting the differential operators by their equivalents for a particular plane wave: %TODO explain
@@ -482,6 +470,27 @@ Continuing in the derivation outlined in \cite{landau1984electrodynamics, krowne
 
 The downsides of the spatial-dispersive model of media is that it is more complicated, leading e.g. to implicit dispersion equation. Its great advantage is however that it provides a correct description of periodic structures discussed below. 
 %}}}
+\mdf{ TODO REF EBD theory and nonlocal electrodynamics %{{{
+\cite{krowne2007book_agran}
+\cite{landau1984electrodynamics}
+\cite{agranovich2006spatial}
+\cite{mikki2009electromagnetic}
+\cite{vinogradov2002form}
+\cite{golubkov1995boundary}
+\cite{agranovich2004linear}
+\cite{agranovich1962crystal}
+}
+%}}}
+\paragraph{Speed of light and causality in spatial-dispersive media}%{{{
+\mdf{TODO REF Kramers-Kronig relations in nonlocal medium
+\cite{skettrup1970kramers}
+\cite{kirzhnitz1976}
+\cite{melrose1977generalised}
+\cite{sun1989kramers}
+\cite{rozanov2003}
+\cite{bruleanalysis}
+\cite{makarov2013kramers}
+}%}}}
 
 \subsection{Dispersion relations in homogeneous nonlocal media} % TODO
 \paragraph{Comparison of eps-mu and spatial-dispersive models}%{{{
@@ -539,6 +548,7 @@ Although maybe less instructive, usually the \textit{folded} bands are plot in t
 %}}}
 \paragraph{Dispersion curves under virtual periodicity}%{{{
 The vacuum properties are obviously invariant under discrete translation by an arbitrary length $a$ along the $z$-axis, which can be considered a \textit{virtual} periodicity. 
+% TODO mention the terminology "band diagram" - "dispersion curves", is there any real difference?
 
 When the wavelength is less than double cell spacing, or equivalently when $2\pi c /K < 2 a$, the unit cells can scatter the forward propagating wave into the backward direction and vice versa. In an infinite periodic structure the energy transfer must be conserved, so the forward and backward waves must be of the same amplitude.\footnote{The equilibrium forward and backward wave amplitudes may, however, differ in some cases even in in infinite periodic structure. One example is when the constituent materials lose time-reversal symmetry due to static magnetic field.} We assume this also in this example with virtual periodicity. The \textit{Bloch wave} (\ref{eq_bloch}) is a product of two functions, and it gives one degree of freedom to select which part of (\ref{eq_bloch}) expresses the phase shift across one unit cell. Two different conventions are used in the literature.
 \begin{enumerate}
@@ -561,6 +571,9 @@ Although maybe less instructive, usually the \textit{folded} bands are plotted i
 %			 (Neumann ... Gamma point ... "dE/dx=0"  vs.  Dirichlet ... M-point ... "E=0")
 \subsection{Antiresonances and problems with local effective parameters}
 
+%% REF \cite{wallen2010}: Anti-resonant response of resonant inclusions
+%  antiresonance "may not" come from periodicity, as it is also in random structures
+%% REF \cite{alu2010}: Restoring the physical meaning of MM cosstitutive parameters
 
 % in the following we will plot the unfolded bands instead as it seems to give clearer physical interpretation of data.
 % -> TODO doplnit "PhC book": dispersní křivky atd.
@@ -581,9 +594,20 @@ Although maybe less instructive, usually the \textit{folded} bands are plotted i
 
 
 \subsection{Homogenization}
-%		"process of replacing a complex structure of subwavelength sized components with an “effective medium” with uni-
-%		form properties. It is a fundamentally important notion which can be traced back to the earliest days of electro-
-%		magnetic theory, to the Lorentz-Lorenz and Maxwell-Garnet effective medium models [1–3]
+\mdf{
+ref Homogenisation issues - response to our paper from OpEx
+\cite{rockstuhl2008transition}
+\cite{paul2011reflection}
+\cite{andryieuski2012bloch}
+\cite{andryieuski2010homogenization} 
+\cite{simovski2007bloch}
+\cite{simovski2009material}
+\cite{simovski2011electromagnetic}
+\cite{mortensen2010unambiguous}
+}
+%% "process of replacing a complex structure of subwavelength sized components with an “effective medium” with uni-
+%% form properties. It is a fundamentally important notion which can be traced back to the earliest days of electro-
+%% magnetic theory, to the Lorentz-Lorenz and Maxwell-Garnet effective medium models [1–3]
 %			[1] J. C. M. Garnett, Phil Trans. R. Soc. A 203, 385 (1904).
 %			[2] D. E. Aspnes, Thin Solid Films 89, 249 (1982).
 %			[3] W. Cai and V. Shalaev, Optical Metamaterials: Fundamentals and Applications (Springer, New York, 2010).
@@ -653,6 +677,8 @@ More detailed investigation shows that the effective-medium approach does not gi
 
 \section{Materials available for metamaterial construction}
 \subsection{General notes}
+% TODO we refer to tunability - complete it in the rest of the document!!
+%% TODO unify impedance as `Z', not `z'
 \subsection{Dielectrics}
 \subsection{Metals}
 % and oxides for optical: Naik2011.pdf
@@ -660,46 +686,6 @@ More detailed investigation shows that the effective-medium approach does not gi
 \subsection{Tunable and switchable materials}
 \subsection{Specifics of the terahertz range}
 
-\mdf{
-\section{TODO}
-
-EBD theory and nonlocal electrodynamics 
-\cite{krowne2007book_agran}
-\cite{landau1984electrodynamics}
-\cite{agranovich2006spatial}
-\cite{mikki2009electromagnetic}
-\cite{vinogradov2002form}
-\cite{golubkov1995boundary}
-\cite{agranovich2004linear}
-\cite{agranovich1962crystal}
-
-Homogenisation of nonlocal media such as wires 
-\cite{capolino2009book}
-\cite{silveirinha2007metamaterial}
-\cite{belov2003strong}
-\cite{belov2002dispersion}
-\cite{lindell2001bw}
-\cite{silveirinha2005homogenization}
-
-Homogenisation issues - response to our paper from OpEx
-\cite{rockstuhl2008transition}
-\cite{paul2011reflection}
-\cite{andryieuski2012bloch}
-\cite{andryieuski2010homogenization} 
-\cite{simovski2007bloch}
-\cite{simovski2009material}
-\cite{simovski2011electromagnetic}
-\cite{mortensen2010unambiguous}
-
-Kramers-Kronig relations in nonlocal medium
-\cite{skettrup1970kramers}
-\cite{kirzhnitz1976}
-\cite{melrose1977generalised}
-\cite{sun1989kramers}
-\cite{rozanov2003}
-\cite{bruleanalysis}
-\cite{makarov2013kramers}
-}
 
 
 %Introduction
