--- a/t.tex
+++ b/t.tex
@@ -8,7 +8,7 @@
 
 \usepackage{biblatex}
 %\usepackage[style=/home/filip/d/biblatex-phys/phys, articletitle=true, biblabel=enumerate, chaptertitle=true,  
-%  pageranges=true, sorting=none, isbn=false, url=false, doi=false, eprint=false, hyperref=true, firstinits=true]{biblatex}
+  %pageranges=true, sorting=none, isbn=false, url=false, doi=false, eprint=false, hyperref=true, firstinits=true]{biblatex}
 %\usepackage[unicode=true,pdftitle={\WorkTitle}, pdfauthor={\FirstandFamilyName}, bookmarks=true, colorlinks=true, breaklinks=true, urlcolor=black, citecolor=black, linkcolor=black, breaklinks=true, plainpages=false,pdfpagelabels=true]{hyperref}
 \setcounter{tocdepth}{4} %% XXX
 \setcounter{secnumdepth}{4} %% XXX
@@ -23,25 +23,25 @@
 \tableofcontents
 
 \chapter{Introduction}
-%\input{intro.tex}
+\input{intro.tex}
 %
 \chapter{Theory}
 \input{theory.tex}
 
 \chapter{Numerical methods}
-%\input{numeric.tex}
+\input{numeric.tex}
 
 \chapter{Experimental methods}
-%\input{expe.tex}
+\input{expe.tex}
 
 \chapter{Results}
-%\input{result.tex}
+\input{result.tex}
 
 \chapter{Conclusion}
-%\input{conclusion.tex}
+\input{conclusion.tex}
 %
 \chapter{Appendices}
-%\input{appendices.tex}
+\input{appendices.tex}
 
 \label{endtext} 
 \printbibliography
