small theory fixes

--- a/theory.tex
+++ b/theory.tex
@@ -87,7 +87,7 @@ where we defined the \textit{speed of light} $c := \frac{1}{\sqrt{\mu_0 \varepsi
 } 
  \item{\textit{Longitudinal electromagnetic waves}, with $\kk\,|| \pm \E$, require the right side of Eq. \ref{eq_wavek} to be zero. In vacuum, there is no such a solution, except for a homogeneous static electric field ($k = 0, \omega = 0$), but they may exist in a dispersive medium.} 
  \end{enumerate}
-%% TODO add figure: dispersion relation in vacuum
+\begin{figure} \caption{Dispersion curve of a transverse electromagnetic wave in vacuum} \centering \includegraphics[width=6cm]{img/dispersion_curve_vacuum.pdf} \end{figure}
 %}}}
 
 \subsection{Local response of media to the electromagnetic field} \label{loc_response_of_media}
@@ -593,9 +593,6 @@ In vacuum, the mode function takes the simplest form, being constant $\mathbf{u(
 Further savings of space in the plot can be made using the symmetry of the forward and backward waves, so only the positive half for $K/\left(\frac{2\pi}{a}\right) \in (0, \frac{1}{2})$ has to be plotted to describe the mode structure.} 
  \end{enumerate}
 Although maybe less instructive, usually the \textit{folded} bands are plotted in the literature and they are used also in Fig. \ref{fg_1dbd}, \ref{fg_rodh} and \ref{fg_erod_radius11} below. The same approach can be used for periodic structures, where the bands are separated by band gaps, cf. Fig. \ref{fg_phc}b and \ref{fg_phc}d.
-\begin{figure} \caption{img/dispersion\_curve\_periodic\_structure.pdf}  \centering \includegraphics[width=8cm]{img/dispersion_curve_periodic_structure.pdf} \end{figure} \clearpage
-\begin{figure} \caption{img/dispersion\_curve\_vacuum.pdf}  \centering \includegraphics[width=8cm]{img/dispersion_curve_vacuum.pdf} \end{figure} \clearpage
-\begin{figure} \caption{img/dispersion\_curve\_vacuum\_virtperiodic.pdf} \centering \includegraphics[width=8cm]{img/dispersion_curve_vacuum_virtperiodic.pdf} \end{figure} \clearpage
 %}}}
 \subsection{Reciprocal space, Brillouin zones and isofrequency contours}
 \subsection{Group velocity, phase velocity and their signs}
